<resources>
    <string name="app_name">notes</string>
    <string name="toolbar_save_note">Save Note</string>
    <string name="dialog_new_folder_title">Create new folder</string>
    <string name="dialog_new_folder_hint">Folder\'s Name</string>
    <string name="dialog_btn_action_save">save</string>
    <string name="dialog_btn_action_cancel">cancel</string>

    <string name="fab_add_text_title">Add Text</string>
    <string name="fab_add_drawing_title">Add Drawing</string>

    <string name="hint_add_drawing_title">Drawing Title</string>
    <string name="hint_add_note_title">Note Title</string>
    <string name="hint_add_note_text">What is on you mind?</string>

    <string name="message_no_text_selected">Select a text</string>
    <string name="message_no_text_warning">You can\'t save a note without text</string>
    <string name="message_no_permission_warning">We need storage permission to proceed</string>

    <string name="import_db">Import Database</string>
    <string name="export_db">Export Database</string>
    <string name="export_db_success">Saved backups successfully :)</string>
    <string name="export_db_fail">Export Failed :(</string>
    <string name="import_db_success">Data backed up successfully :)</string>
    <string name="import_db_fail">Import Failed :(</string>

    <string name="img_id_desc">Identifier image to separate different type of menu items by image</string>
    <string name="img_delete_desc">Remove image to remove data from lists</string>

</resources>
