<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dialog_new_folder_title_text_margin"
        android:text="@string/dialog_new_folder_title" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layoutFolderName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dialog_new_folder_edt_margin">

        <EditText
            android:id="@+id/edtFolderName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_new_folder_hint"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/txtCancel"
            android:layout_width="@dimen/dialog_new_folder_text_width"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dialog_new_folder_action_text_margin"
            android:layout_marginLeft="@dimen/dialog_new_folder_action_text_margin"
            android:layout_marginStart="@dimen/dialog_new_folder_action_text_margin"
            android:layout_marginTop="@dimen/dialog_new_folder_action_text_margin"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/dialog_btn_action_cancel" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/txtSave"
            android:layout_width="@dimen/dialog_new_folder_text_width"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dialog_new_folder_action_text_margin"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/dialog_btn_action_save" />


    </android.support.v7.widget.LinearLayoutCompat>

</LinearLayout>